<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">



<RelativeLayout
    android:id="@+id/relativelayout_activity_main"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.MainActivity"
   >


    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <FrameLayout
        android:id="@+id/framelayout_activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/toolbar"
        tools:listitem="@layout/item_list_meetings"
        />

</RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floating_button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="#DB1702"
        android:layout_marginEnd="@dimen/margin_init"
        android:layout_marginBottom="@dimen/margin_init"
        android:src="@drawable/ic_add_meeting"
        android:clickable="true"
        android:focusable="true"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



</android.support.constraint.ConstraintLayout>