<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/filter_icon"
        android:icon="@drawable/ic_filtre_meetings"
        android:title="@string/filter_icon_title"
        app:showAsAction="ifRoom">


        <menu>

            <group>
                <item
                    android:id="@+id/filter_mode_noFilter"
                    android:title="@string/mode_noFilter" />
            </group>

            <group>
                <item
                    android:id="@+id/filter_mode_meetingRooms"
                    android:title="@string/mode_meetingRoom" />
            </group>

            <group>
                <item
                    android:id="@+id/filter_mode_date"
                    android:title="@string/mode_date" />
            </group>

            <group>
                <item
                    android:id="@+id/filter_mode_place_and_date"
                    android:title="@string/mode_place_and_date" />
            </group>

        </menu>


    </item>

</menu>